# toyai

./: Cargo.toml  README.md
data/: iris.data
src/: lib.rs  ml.rs
src/ml/: dataset.rs  perceptron.rs
