[package]
name = "toyai"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A small collection of ai algorithms to perform some simple prediction on structured data."
authors = ["Enrycoop <enricocoppolecchia@outlook.com>"]
repository = "https://github.com/enrycoop/toyai.git"

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3